--- a/2008_2018/Analise.ipynb
+++ b/2008_2018/Analise.ipynb
@@ -32,7 +32,7 @@
     "%matplotlib inline\n",
     "\n",
     "\n",
-    "##Função para verificaar a integridade dos dados\n",
+    "##Função para verificar a integridade dos dados\n",
     "def integridade(arq, ver):\n",
     "    '''\n",
     "    def integridade(): Serve para verificar a integridade dos arquivos;\n",
@@ -88,7 +88,7 @@
     "    Quant_Alunos = df_turmas.query(f'{Code} in {Escolas_Temp}')[Code_Turmas].sum()\n",
     "    return [Quant_Escolas, Quant_Alunos]\n",
     "\n",
-    "##Vericar se a análise já foi feita anteriormente\n",
+    "##Verificar se a análise já foi feita anteriormente\n",
     "print(datetime.now())\n",
     "try:\n",
     "    with open('saida.csv', 'r'):\n",
